syntax = "proto3";
option java_multiple_files = true;
package com.item.management.client.service;


message CheckAvailableRequest {
    string officeId = 1;
    string itemId = 2;
    int32 total = 3;
    string requestId = 4; 
}

message CheckAvailableRequestResponse {
    string requestId = 1;
    string officeId = 2;
    int32 total = 3;
    repeated string serialNumbers = 4;
}

service CheckAvailableService {
    rpc checkAR(CheckAvailableRequest) returns (CheckAvailableRequestResponse);
}